--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 <head>
   <meta charset="utf-8">
   <title>Navneet Lohia's Personal Site</title>
+  <link rel="stylesheet" href="css/styles.css">
+
 </head>
 
 <body>
   <table cellspacing="10">
     <tr>
-      <td><img src="DP.jpg" alt="Navneet Lohia's Profile Picture" height="250" width="180"></td>
+      <td><img class = "dp" src="DP.jpg" alt="Navneet Lohia's Profile Picture" height="220" width="180"></td>
       <td>
         <h1>Navneet Lohia</h1>
         <p>
